[gd_scene load_steps=3 format=3 uid="uid://brnljyynm773q"]

[ext_resource type="Script" uid="uid://dfiypymj4ct8q" path="res://scenes/ui/lobby.gd" id="1_ll2xe"]
[ext_resource type="Texture2D" uid="uid://dl147nj717l6d" path="res://assets/LOBBY.png" id="2_xrgmn"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ll2xe")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LabelTitle" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 406.0
offset_top = 52.0
offset_right = 744.0
offset_bottom = 101.0
text = "LOBBY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -117.5
offset_right = 112.0
offset_bottom = 117.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonStart" type="Button" parent="CanvasLayer"]
offset_left = 447.0
offset_top = 507.0
offset_right = 705.0
offset_bottom = 580.0
text = "START"

[node name="LabelStatus" type="Label" parent="CanvasLayer"]
offset_left = 384.0
offset_top = 450.0
offset_right = 773.0
offset_bottom = 509.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lobby" type="Sprite2D" parent="."]
position = Vector2(576.00006, 323.5)
scale = Vector2(0.9999999, 0.99691826)
texture = ExtResource("2_xrgmn")

[connection signal="pressed" from="CanvasLayer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
